--- a/index.html
+++ b/index.html
@@ -1,10 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tamiuzz company  - شركة تميز </title>
+    <title>
+      Tamiuzz Company - شركة تميّز للحلول الرقمية والتسويق الإلكتروني
+    </title>
+    <meta
+      name="description"
+      content="شركة تميّز للحلول الرقمية والتسويق الإلكتروني تقدم خدمات SEO وتصميم مواقع وحملات PPC وإدارة التواصل الاجتماعي للشركات في مصر والخليج منذ 2018."
+    />
+    <meta
+      name="keywords"
+      content="تسويق إلكتروني، SEO، تصميم مواقع، حملات PPC، إدارة تواصل اجتماعي"
+    />
+    <meta name="author" content="Tamiuzz - تميّز للخدمات الرقمية" />
+
+    <meta
+      name="description"
+      content="شركة تميّز للحلول الرقمية والتسويق الإلكتروني تقدم خدمات SEO وتصميم مواقع وحملات PPC وإدارة التواصل الاجتماعي للشركات في مصر والخليج منذ 2018."
+    />
+    <meta
+      property="og:title"
+      content="شركة تميّز – حلول رقمية وتسويق إلكتروني للشركات"
+    />
+    <meta
+      property="og:description"
+      content="نقدم خدمات SEO، تصميم مواقع وتطبيقات، إعلانات مدفوعة، إدارة حسابات السوشال ميديا للشركات منذ 2018."
+    />
+    <meta property="og:image" content="https://tamiuzz.com/og-image.jpg" />
+    <meta property="og:url" content="https://tamiuzz.com" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tamiuzz – تميّز للخدمات الرقمية" />
+    <meta
+      name="twitter:description"
+      content="خدمات تسويق إلكتروني متكاملة؛ من SEO وتصميم إلى إدارة حملات التواصل الاجتماعي للشركات."
+    />
+    <meta
+      name="twitter:image"
+      content="https://tamiuzz.com/twitter-image.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
