--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       property="og:description"
       content="نقدم خدمات SEO، تصميم مواقع وتطبيقات، إعلانات مدفوعة، إدارة حسابات السوشال ميديا للشركات منذ 2018."
     />
-    <meta property="og:image" content="https://tamiuzz.com/og-image.jpg" />
+    <meta property="og:image" content="/logo.svg" />
     <meta property="og:url" content="https://tamiuzz.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -38,10 +38,9 @@
       name="twitter:description"
       content="خدمات تسويق إلكتروني متكاملة؛ من SEO وتصميم إلى إدارة حملات التواصل الاجتماعي للشركات."
     />
-    <meta
-      name="twitter:image"
-      content="https://tamiuzz.com/twitter-image.jpg"
-    />
+    <meta name="twitter:image" content="/logo.svg" />
+    <link rel="alternate" hreflang="en" href="https://tamiuzz.com/en" />
+    <link rel="alternate" hreflang="ar" href="https://tamiuzz.com/ar" />
   </head>
   <body>
     <div id="root"></div>
