--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
@@ -13,14 +13,12 @@
     />
     <meta
       name="keywords"
-      content="تسويق إلكتروني، SEO، تصميم مواقع، حملات PPC، إدارة تواصل اجتماعي"
+      content="تسويق إلكتروني، SEO، تصميم مواقع، حملات PPC، إدارة تواصل اجتماعي، digital marketing, web design, social media management"
     />
     <meta name="author" content="Tamiuzz - تميّز للخدمات الرقمية" />
+    <link rel="canonical" href="https://tamiuzz.com/" />
 
-    <meta
-      name="description"
-      content="شركة تميّز للحلول الرقمية والتسويق الإلكتروني تقدم خدمات SEO وتصميم مواقع وحملات PPC وإدارة التواصل الاجتماعي للشركات في مصر والخليج منذ 2018."
-    />
+    <meta property="og:type" content="website" />
     <meta
       property="og:title"
       content="شركة تميّز – حلول رقمية وتسويق إلكتروني للشركات"
@@ -29,8 +27,11 @@
       property="og:description"
       content="نقدم خدمات SEO، تصميم مواقع وتطبيقات، إعلانات مدفوعة، إدارة حسابات السوشال ميديا للشركات منذ 2018."
     />
-    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:image" content="https://tamiuzz.com/og-image.png" />
     <meta property="og:url" content="https://tamiuzz.com" />
+    <meta property="og:locale" content="ar_SA" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="Tamiuzz - تميّز" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tamiuzz – تميّز للخدمات الرقمية" />
@@ -38,9 +39,11 @@
       name="twitter:description"
       content="خدمات تسويق إلكتروني متكاملة؛ من SEO وتصميم إلى إدارة حملات التواصل الاجتماعي للشركات."
     />
-    <meta name="twitter:image" content="/logo.svg" />
-    <link rel="alternate" hreflang="en" href="https://tamiuzz.com/en" />
-    <link rel="alternate" hreflang="ar" href="https://tamiuzz.com/ar" />
+    <meta name="twitter:image" content="https://tamiuzz.com/og-image.png" />
+
+    <link rel="alternate" hreflang="ar" href="https://tamiuzz.com/" />
+    <link rel="alternate" hreflang="en" href="https://tamiuzz.com/" />
+    <link rel="alternate" hreflang="x-default" href="https://tamiuzz.com/" />
   </head>
   <body>
     <div id="root"></div>
