--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#1a3a8f" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0a1129" />
+
+    <!-- Apple Touch Icons & Mobile App Meta -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Tamiuzz" />
+
     <title>
       Tamiuzz Company - شركة تميّز للحلول الرقمية والتسويق الإلكتروني
     </title>
@@ -44,6 +57,9 @@
     <link rel="alternate" hreflang="ar" href="https://tamiuzz.com/" />
     <link rel="alternate" hreflang="en" href="https://tamiuzz.com/" />
     <link rel="alternate" hreflang="x-default" href="https://tamiuzz.com/" />
+
+    <!-- Performance Optimization: Preload critical assets -->
+    <link rel="preload" as="image" href="/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
